; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sonicvibes.c_snd_sonicvibes_playback_pointer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_sonicvibes.c_snd_sonicvibes_playback_pointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.sonicvibes = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @snd_sonicvibes_playback_pointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_sonicvibes_playback_pointer(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_pcm_substream*, align 8
  %4 = alloca %struct.sonicvibes*, align 8
  %5 = alloca i64, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %3, align 8
  %6 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %7 = call %struct.sonicvibes* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %6)
  store %struct.sonicvibes* %7, %struct.sonicvibes** %4, align 8
  %8 = load %struct.sonicvibes*, %struct.sonicvibes** %4, align 8
  %9 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = and i32 %10, 1
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

14:                                               ; preds = %1
  %15 = load %struct.sonicvibes*, %struct.sonicvibes** %4, align 8
  %16 = getelementptr inbounds %struct.sonicvibes, %struct.sonicvibes* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.sonicvibes*, %struct.sonicvibes** %4, align 8
  %19 = call i64 @snd_sonicvibes_getdmaa(%struct.sonicvibes* %18)
  %20 = sub i64 %17, %19
  store i64 %20, i64* %5, align 8
  %21 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %22 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i64, i64* %5, align 8
  %25 = call i32 @bytes_to_frames(i32 %23, i64 %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %14, %13
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local %struct.sonicvibes* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1

declare dso_local i64 @snd_sonicvibes_getdmaa(%struct.sonicvibes*) #1

declare dso_local i32 @bytes_to_frames(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
